--- a/build.gradle
+++ b/build.gradle
@@ -14,14 +14,15 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'info.picocli:picocli:4.7.5'
+    implementation 'org.json:json:20231013'
     annotationProcessor 'info.picocli:picocli-codegen:4.7.5'
 }
 
-mainClassName = 'dev.brace.Oliver'
+mainClassName = 'dev.brace.Main'
 
 application {
     // Set the main class
-    mainClassName = 'dev.brace.Oliver'
+    mainClassName = 'dev.brace.Main'
 }
 
 compileJava {
