--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,11 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'org.slf4j:slf4j-nop:2.0.7'
     implementation 'info.picocli:picocli:4.7.5'
     implementation 'org.json:json:20231013'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
+    implementation 'com.networknt:json-schema-validator:1.0.87'
     annotationProcessor 'info.picocli:picocli-codegen:4.7.5'
 }
 
